--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
+encoding//CS310/divtags/admin.py=utf-8
 encoding//CS310/divtags/apps.py=utf-8
+encoding//CS310/divtags/migrations/0001_initial.py=utf-8
+encoding//CS310/divtags/models.py=utf-8
 encoding//CS310/divtags/views.py=utf-8
